# vonava_predikce

./: .gitignore  .output.txt  DATASET_PROFILE_MODELING_AUDIT.md  PRESENTATION_CLEANUP.md  README.md  RETRAINING_AND_CLI_GUIDE.md  final_tier_b_fix_plan.md  playing_around.ipynb  progress.txt  pyproject.toml  tier_b_remaining_corrections.md
docs/: README.md  app.js  common.js  dataset.html  evaluation.html  index.html  model.html  model.js  styles.css  whole-story.html  whole-story.js
ml/: benchmark_nn_batch_size.py  dashboard_artifacts.py  export_results.py  features.py  framework.py  pipeline.py  provenance.py  publish_dashboard.py  run_c1_screening.py  run_final_audit.py  solution_final.py  tree_worker.py
outputs/: README.md  benchmark_summary.csv  cv_results.csv  cv_results_all.csv  dashboard_manifest.json  dev_summary.csv  ensemble_comparison.csv  ensemble_weights.csv  ensemble_weights.json  final_audit_manifest.json  final_forecasts.parquet  holdout_summary.csv  oof_predictions.parquet  prediction_diagnostics.csv  results.json  strategy_by_horizon.csv  strategy_pair_summary.csv  submission.csv  submission.parquet  submission_direct.csv  submission_direct.parquet  submission_ensemble.csv  submission_ensemble.parquet  submission_recursive.csv  submission_recursive.parquet  test_aligned_scores.csv  timings.json  validation_strata_summary.csv
outputs_c1_half365/: benchmark_summary.csv  cv_results.csv  cv_results_all.csv  dev_summary.csv  final_forecasts.parquet  oof_predictions.parquet  prediction_diagnostics.csv  prediction_diagnostics_by_origin.csv  results.json  (+6 more)
(+267 files in other folders)
